# hexa-cern

./: .gitignore  .roadmap.hexa_cern  .roadmap.petite_cern  AGENTS.tape  CHANGELOG.md  IMPORTED_FROM_CANON.tape  LIMIT_BREAKTHROUGH.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0-pre.md  TAPE-AUDIT.md  hexa.toml  install.hexa
classical/doc/: classical-mechanics-accelerator.md
cli/: hexa-cern.hexa  petite-cern.hexa
docs/: cern_baseline.md  runnable_surface_recipe.md
firmware/: Makefile
firmware/hdl/: timing_ctrl_regs.v
firmware/mcu/: Cargo.toml
firmware/mcu/.cargo/: config.toml
firmware/mcu/src/: consts.rs  dac.rs  interlock.rs  lib.rs  main.rs  pi.rs  state.rs
mini/doc/: mini-accelerator.md
parent/doc/: particle-accelerator.md
tests/: test_all.hexa  test_calculators.hexa  test_cli_verify.hexa  test_lattice.hexa  test_selftest.hexa
verify/: calc_wakefield.hexa  cross_doc_audit.hexa  empirical_classical_arxiv.hexa  empirical_lhc_api.hexa  empirical_lwfa_hepdata.hexa  falsifier_check.hexa  lint_numerics.hexa  run_all.hexa  saturation_check.hexa
